Hide the Rail Lines this Station is on feature, it's mostly clutter, and make sure that diagonal text spacing scales appropriately at any size; add cheat code to size canvas to whatever size suitable for printing

--- a/metro_map_saver/map_saver/static/css/metromapmaker.css
+++ b/metro_map_saver/map_saver/static/css/metromapmaker.css
@@ -140,6 +140,11 @@ canvas#grid-canvas, canvas#hover-canvas {
   left: 0;
 }
 
+.station-rail-lines {
+  /* I'm not sure how useful this feature is, maybe it's just clutter? Let's hide it */
+  display: none;
+}
+
 #remix, #credits {
   text-align: left;
 }
